--- a/find_all_here/find_all_here/find_all_here.csproj
+++ b/find_all_here/find_all_here/find_all_here.csproj
@@ -28,8 +28,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Home.xaml.cs">
-      <DependentUpon>Home.xaml</DependentUpon>
+    <Compile Update="HomeView.xaml.cs">
+      <DependentUpon>HomeView.xaml</DependentUpon>
     </Compile>
     <Compile Update="Inbox.xaml.cs">
       <DependentUpon>Inbox.xaml</DependentUpon>
