--- a/find_all_here/find_all_here.Android/find_all_here.Android.csproj
+++ b/find_all_here/find_all_here.Android/find_all_here.Android.csproj
@@ -58,6 +58,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
     </PackageReference>
+    <PackageReference Include="XamAR.Forms">
+      <Version>0.2.28-alpha</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.1" />
   </ItemGroup>
