--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /find_all_here/find_all_here.Android/bin/
 /find_all_here/find_all_here.Android/obj/
 /find_all_here/find_all_here.Android/find_all_here.Android.csproj.user
+.idea/
