--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-.vs/
+/.vs/
 /find_all_here/find_all_here/bin/
 /find_all_here/find_all_here/obj/
 /find_all_here/find_all_here.Android/bin/
 /find_all_here/find_all_here.Android/obj/
 /find_all_here/find_all_here.Android/find_all_here.Android.csproj.user
-.idea/
+/.idea/
