--- a/find_all_here/find_all_here.Android/find_all_here.Android.csproj
+++ b/find_all_here/find_all_here.Android/find_all_here.Android.csproj
@@ -77,6 +77,7 @@
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidResource Include="Resources\drawable\bell.png" />
     <AndroidResource Include="Resources\drawable\cart.png" />
     <AndroidResource Include="Resources\drawable\fah_logo.png" />
     <AndroidResource Include="Resources\drawable\logout.png" />
