--- a/find_all_here/find_all_here.Android/find_all_here.Android.csproj
+++ b/find_all_here/find_all_here.Android/find_all_here.Android.csproj
@@ -170,5 +170,8 @@
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\x.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
