--- a/find_all_here/find_all_here/find_all_here.csproj
+++ b/find_all_here/find_all_here/find_all_here.csproj
@@ -55,7 +55,7 @@
       <DependentUpon>PagoView.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="Views\Profile.xaml.cs">
+    <Compile Update="Views\ProfileView.xaml.cs">
       <DependentUpon>Profile.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
