--- a/find_all_here/find_all_here.Android/find_all_here.Android.csproj
+++ b/find_all_here/find_all_here.Android/find_all_here.Android.csproj
@@ -173,5 +173,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\x.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\settings.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
