--- a/find_all_here/find_all_here/find_all_here.csproj
+++ b/find_all_here/find_all_here/find_all_here.csproj
@@ -95,6 +95,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <DependentUpon>AssemblyInfo.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\WatchImageView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
